mobile home page styles

--- a/app/brand-story.html
+++ b/app/brand-story.html
@@ -68,6 +68,17 @@
                 </div><!--/.container-fluid-->
               </article><!--/#story-1-->
               <article id="story-2">
+                <div class="container-fluid">
+                  <div class="row">
+                    <div class="col-sm-6 col-sm-offset-3 col-xs-12">
+                      <h3>OVER 90 YEARS OF INNOVATION</h3>
+                      <div class="row subtext">
+                        <p class="col-xs-12 col-sm-6">Lorem ipsum dolor sit amet, dicunt tacimates ei vim, te viris mediocrem mei. Eu eum sint</p>
+                        <p class="col-xs-12 col-sm-6">Alii alia pro ad, pri at mutat accusamus. Vel ut nihil laudem petentium.</p>
+                      </div>
+                    </div>
+                  </div><!--/.row-->
+                </div><!--/.container-fluid-->
                 <img class="down-arrow" src="images/arrow.png">
               </article><!--/.brand-story-3-->
               <article id="story-3">
