--- a/app/index.html
+++ b/app/index.html
@@ -57,12 +57,11 @@
           <div class="header"></div>
           <!--<div class="snappish-main">-->
               <article class="welcome" id="welcome">
-                  <div class="animated catbg"></div>
+                  <div class="catbg"></div>
                   <div class="container-fluid">
                     <div class="row">
-                      <div class="col-xs-12 page-title">
-                        <h1 class="animated fadeInUp">Brand Story FPO</h1>
-                        <p class="animated fadeInUp"><a href="brand-story.html">lorem ipsum sit amet</a></p>
+                      <div class="col-xs-12 page-title hidden-xs">
+
                       </div><!--/.col-xs-12-->
                     </div><!--/.row-->
                     <div class="row links hidden-xs">
@@ -87,47 +86,64 @@
               <article class="visible-xs default group">
                 <div class="container-fluid">
                   <div class="row">
-                    <h1 class="animated fadeInUp">Brand Story FPO</h1>
-                    <p class="animated fadeInUp"><a href="brand-story.html">lorem ipsum sit amet</a></p>
+                    <div class="col-sm-8 col-sm-offset-2 col-xs-12 headline">
+                      <h1 class="animated fadeInUp">Brand Story FPO</h1>
+                      <p class="animated fadeInUp larger"><a href="brand-story.html">lorem ipsum sit amet<span class="icn icn-caret"></span></a></p>
+                    </div>
                   </div>
                 </div>
               </article><!--/.default-->
               <article class="visible-xs category-1 group">
                 <div class="container-fluid">
                   <div class="row">
-                    <h2 class="animated fadeInUp">Today, we've powered 2,435,865 check-ins on Facebook.</h2>
-                    <p class="animated fadeInUp">Turn information into insights by connecting geography with data.</p>
+                    <div class="col-sm-8 col-sm-offset-2 col-xs-12 headline">
+                      <h2 class="animated fadeIn hidden-xs">Today, we've powered 2,435,865 check-ins on Facebook.</h2>
+                      <h2 class="visible-xs col-xs-12">Customer Information Management</h2>
+                      <p class="animated fadeIn">Turn information into insights by connecting geography with data.</p>
+                    </div>
                   </div><!--/.row-->
                 </div><!--/.container-fluid-->
               </article><!--/.category-1-->
               <article class="visible-xs category-2 group">
                 <div class="container-fluid">
                   <div class="row">
-                    <h2 class="animated fadeInUp">PRI MEDOCREM MEI EU EUM SINT</h2>
-                    <p class="animated fadeInUp">Turn information into insights by connecting geography with data.</p>
+                    <div class="col-sm-8 col-sm-offset-2 col-xs-12 headline">
+                      <h2 class="animated fadeIn hidden-xs">PRI MEDOCREM MEI EU EUM SINT</h2>
+                      <h2 class="visible-xs col-xs-12">Location Intelligence</h2>
+                      <p class="animated fadeIn">Turn information into insights by connecting geography with data.</p>
+                    </div>
                   </div><!--/.row-->
                 </div><!--/.container-fluid-->
               </article><!--/.category-2-->
               <article class="visible-xs category-3 group">
                 <div class="container-fluid">
                   <div class="row">
-                    <h2 class="animated fadeInUp">PRI MEDOCREM MEI EU EUM SINT</h2>
+                    <div class="col-sm-8 col-sm-offset-2 col-xs-12 headline">
+                      <h2 class="animated fadeIn hidden-xs">PRI MEDOCREM MEI EU EUM SINT</h2>
+                      <h2 class="visible-xs col-xs-12">Customer Engagement</h2>
+                    </div>
                   </div><!--/.row-->
                 </div><!--/.container-fluid-->
               </article><!--/.category-3-->
               <article class="visible-xs category-4 group">
                 <div class="container-fluid">
                   <div class="row">
-                    <h2 class="animated fadeInUp">Right Now, we're printing and sorting 9,125,744 bank statements.</h2>
-                    <p class="animated fadeInUp">Print. Mail. Ship. Increase productivity while lowering costs.</p>
+                    <div class="col-sm-8 col-sm-offset-2 col-xs-12 headline">
+                      <h2 class="animated fadeIn hidden-xs">Right Now, we're printing and sorting 9,125,744 bank statements.</h2>
+                      <h2 class="visible-xs col-xs-12">Shipping and Mailing</h2>
+                      <p class="animated fadeIn">Print. Mail. Ship. Increase productivity while lowering costs.</p>
+                    </div>
                   </div><!--/.row-->
                 </div><!--/.container-fluid-->
               </article><!--/.category-4-->
               <article class="visible-xs category-5 group">
                 <div class="container-fluid">
                   <div class="row">
-                    <h2 class="animated fadeInUp">Yesterday, we helped 10,456 eBay packages clear customs in India.</h2>
-                    <p class="animated fadeInUp">Streamline international shipping by removing hurdles.</p>
+                    <div class="col-sm-8 col-sm-offset-2 col-xs-12 headline">
+                      <h2 class="animated fadeIn hidden-xs">Yesterday, we helped 10,456 eBay packages clear customs in India.</h2>
+                      <h2 class="visible-xs col-xs-12">Global Ecommerce</h2>
+                      <p class="animated fadeIn">Streamline international shipping by removing hurdles.</p>
+                    </div>
                   </div><!--/.row-->
                 </div><!--/.container-fluid-->
               </article><!--/.category-5-->
@@ -156,6 +172,13 @@
         <div class="table">
           <div class="vertical-wrap">
             <div class="container-fluid">
+              <div class="row secondary-nav">
+                <div class="col-xs-6 visible-xs"><a href="#">My Account</a></div>
+                <div class="col-xs-6 col-sm-4 col-sm-offset-4 us-link"><a href="#">U.S. English</a></div>
+                <div class="col-xs-12 visible-xs">
+                  <div class="divider"></div>
+                </div>
+              </div>
               <div class="row">
                 <div class="col-xs-12">
                   <ul class="cat-links">
@@ -164,7 +187,8 @@
                     <li><a href="#">Location Intelligence</a></li>
                     <li><a href="#">Customer Engagement</a></li>
                     <li><a href="#">Shipping and Mailing</a></li>
-                    <li class="last"><a href="#">Global eCommerce</a></li>
+                    <li><a href="#">Global eCommerce</a></li>
+                    <li class="last"><a href="#">Brand Story FPO</a></li>
                   </ul>
                 </div>
                 <div class="col-xs-12">
@@ -172,19 +196,12 @@
                 </div>
               </div>
               <ul class="bottom-links row">
-                <li class="col-sm-2 col-xs-6 col-sm-offset-1"><a href="#">Enterprise Support</a></li>
-                <li class="col-sm-2 col-xs-6"><a href="#">Industries</a></li>
-                <li class="col-sm-2 col-xs-6"><a href="#">Ink and Supplies</a></li>
-                <li class="col-sm-2 col-xs-6"><a href="#">Small Business</a></li>
-                <li class="col-sm-2 hidden-xs last"><a href="#">U.S. English</a></li>
+                <li><a href="#">Support</a></li>
+                <li><a href="#">Industries</a></li>
+                <li><a href="#">Ink and Supplies</a></li>
+                <li class="last"><a href="#">Small Business</a></li>
               </ul>
-              <div class="row visible-xs mobile-links">
-                <div class="col-xs-12">
-                  <div class="divider"></div>
-                </div>
-                <div class="col-xs-6"><a href="#">My Account</a></div>
-                <div class="col-xs-6"><a href="#">U.S. English</a></div>
-              </div>
+
             </div><!--/.container-fluid-->
           </div><!--/.vertical-wrap-->
         </div><!--/.table-->
