brand story mobile styles

--- a/app/brand-story.html
+++ b/app/brand-story.html
@@ -70,7 +70,7 @@
               <article id="story-2">
                 <div class="container-fluid">
                   <div class="row">
-                    <div class="col-sm-6 col-sm-offset-3 col-xs-12">
+                    <div class="story-title col-sm-6 col-sm-offset-3 col-xs-12">
                       <h3>OVER 90 YEARS OF INNOVATION</h3>
                       <div class="row subtext">
                         <p class="col-xs-12 col-sm-6">Lorem ipsum dolor sit amet, dicunt tacimates ei vim, te viris mediocrem mei. Eu eum sint</p>
@@ -78,10 +78,20 @@
                       </div>
                     </div>
                   </div><!--/.row-->
+                  <img class="down-arrow" src="images/arrow.png">
                 </div><!--/.container-fluid-->
-                <img class="down-arrow" src="images/arrow.png">
               </article><!--/.brand-story-3-->
               <article id="story-3">
+                <div class="container-fluid">
+                  <div class="row">
+                    <div class="story-title col-sm-6 col-sm-offset-3 col-xs-12">
+                      <h3>A GLOBAL ENTERPRISE</h3>
+                      <div class="row subtext">
+                        <p class="col-xs-12 col-sm-12">Lorem ipsum dolor sit amet, dicunt tacimates ei vim, te viris mediocrem mei. Eu eum sint</p>
+                      </div>
+                    </div>
+                  </div><!--/.row-->
+                </div>
               </article><!--/.brand-story-3-->
 
           </div>
@@ -109,6 +119,13 @@
         <div class="table">
           <div class="vertical-wrap">
             <div class="container-fluid">
+              <div class="row secondary-nav">
+                <div class="col-xs-6 visible-xs"><a href="#">My Account</a></div>
+                <div class="col-xs-6 col-sm-4 col-sm-offset-4 us-link"><a href="#">U.S. English</a></div>
+                <div class="col-xs-12 visible-xs">
+                  <div class="divider"></div>
+                </div>
+              </div>
               <div class="row">
                 <div class="col-xs-12">
                   <ul class="cat-links">
@@ -117,7 +134,8 @@
                     <li><a href="#">Location Intelligence</a></li>
                     <li><a href="#">Customer Engagement</a></li>
                     <li><a href="#">Shipping and Mailing</a></li>
-                    <li class="last"><a href="#">Global eCommerce</a></li>
+                    <li><a href="#">Global eCommerce</a></li>
+                    <li class="last"><a href="#">Brand Story FPO</a></li>
                   </ul>
                 </div>
                 <div class="col-xs-12">
@@ -125,24 +143,16 @@
                 </div>
               </div>
               <ul class="bottom-links row">
-                <li class="col-sm-2 col-xs-6 col-sm-offset-1"><a href="#">Enterprise Support</a></li>
-                <li class="col-sm-2 col-xs-6"><a href="#">Industries</a></li>
-                <li class="col-sm-2 col-xs-6"><a href="#">Ink and Supplies</a></li>
-                <li class="col-sm-2 col-xs-6"><a href="#">Small Business</a></li>
-                <li class="col-sm-2 hidden-xs last"><a href="#">U.S. English</a></li>
+                <li><a href="#">Support</a></li>
+                <li><a href="#">Industries</a></li>
+                <li><a href="#">Ink and Supplies</a></li>
+                <li class="last"><a href="#">Small Business</a></li>
               </ul>
-              <div class="row visible-xs mobile-links">
-                <div class="col-xs-12">
-                  <div class="divider"></div>
-                </div>
-                <div class="col-xs-6"><a href="#">My Account</a></div>
-                <div class="col-xs-6"><a href="#">U.S. English</a></div>
-              </div>
+
             </div><!--/.container-fluid-->
           </div><!--/.vertical-wrap-->
         </div><!--/.table-->
       </div><!--/.menu-overlay-->
-
 
         <!-- build:js scripts/vendor.js -->
         <script src="scripts/vendors/jquery/jquery-1.11.1.min.js"></script>
