--- a/app/index.html
+++ b/app/index.html
@@ -210,6 +210,7 @@
 
         <!-- build:js scripts/vendor.js -->
         <script src="scripts/vendors/jquery/jquery-1.11.1.min.js"></script>
+        <script src="scripts/vendors/modernizr.prod.min.js"></script>
         <!-- endbuild -->
 
 
