updated menu fade in to css transitions

--- a/app/index.html
+++ b/app/index.html
@@ -153,7 +153,7 @@
       <footer>
 
       </footer>
-      <div class="menu-overlay">
+      <div class="menu-overlay animated">
         <div class="fixed-top">
           <div class="container-fluid">
             <div class="row">
@@ -210,6 +210,7 @@
 
         <!-- build:js scripts/vendor.js -->
         <script src="scripts/vendors/jquery/jquery-1.11.1.min.js"></script>
+        <script src="scripts/vendors/jquery/jquery-ui.min.js"></script>
         <script src="scripts/vendors/modernizr.prod.min.js"></script>
         <!-- endbuild -->
 
