--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,7 @@
             <nav class="col-xs-6">
               <ul>
                 <li><a href="#" class="icn-menu"></a><li>
-                <li><a href="#" class="icn-search hidden-xs"></a></li>
+                <li><a href="#" class="icn-search"></a></li>
                 <li><a href="#" class="icn-cart"></a></li>
               </ul>
             </nav>
@@ -161,10 +161,9 @@
                 <a href="#">
                   <img src="images/pitneybowes-logo.png" alt="pitney bowes logo" class="hidden-xs"/>
                 </a>
-                <input type="text" value="Search" class="visible-xs mobile-search" />
               </div>
               <div class="col-xs-2 col-sm-8">
-                <a href="#" class="close"></a>
+                <a href="#" class="close close-menu"></a>
               </div>
             </div>
           </div>
@@ -172,12 +171,8 @@
         <div class="table">
           <div class="vertical-wrap">
             <div class="container-fluid">
-              <div class="row secondary-nav">
-                <div class="col-xs-6 visible-xs"><a href="#">My Account</a></div>
+              <div class="row secondary-nav hidden-xs">
                 <div class="col-xs-6 col-sm-4 col-sm-offset-4 us-link"><a href="#">U.S. English</a></div>
-                <div class="col-xs-12 visible-xs">
-                  <div class="divider"></div>
-                </div>
               </div>
               <div class="row">
                 <div class="col-xs-12">
@@ -201,11 +196,37 @@
                 <li><a href="#">Ink and Supplies</a></li>
                 <li class="last"><a href="#">Small Business</a></li>
               </ul>
+              <div class="col-xs-12 visible-xs">
+                <div class="divider"></div>
+              </div>
+              <div class="row secondary-nav">
+                <div class="col-xs-6 visible-xs"><a href="#">My Account</a></div>
+                <div class="col-xs-6 visible-xs"><a href="#">U.S. English</a></div>
+              </div>
 
             </div><!--/.container-fluid-->
           </div><!--/.vertical-wrap-->
         </div><!--/.table-->
       </div><!--/.menu-overlay-->
+
+      <div class="search-overlay animated">
+        <div class="fixed-top">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="logo col-sm-4 col-xs-10">
+                <a href="#">
+                  <img src="images/pitneybowes-logo.png" alt="pitney bowes logo" class="hidden-xs"/>
+                </a>
+                <input type="text" value="Search" class="visible-xs mobile-search" />
+                <a href="#" class="search-clear">clear</a>
+              </div>
+              <div class="col-xs-2 col-sm-8">
+                <a href="#" class="close close-search"></a>
+              </div>
+            </div>
+          </div>
+        </div><!--/.fixed-top-->
+      </div><!--/.search-overlay-->
 
 
         <!-- build:js scripts/vendor.js -->
