added open search functionality with new animation

--- a/app/index.html
+++ b/app/index.html
@@ -209,7 +209,8 @@
         </div><!--/.table-->
       </div><!--/.menu-overlay-->
 
-      <div class="search-overlay animated">
+      <div class="search-overlay">
+        <div class='search-bg'></div>
         <div class="fixed-top">
           <div class="container-fluid">
             <div class="row">
@@ -239,6 +240,7 @@
         <!-- build:js({app,.tmp}) scripts/main.js -->
         <script src="scripts/pb.main.js"></script>
         <script src="scripts/pb.menu.js"></script>
+        <script src="scripts/pb.opensearch.js"></script>
         <script src="scripts/pb.home.js"></script>
         <!-- endbuild -->
 
