--- a/app/category.html
+++ b/app/category.html
@@ -52,9 +52,75 @@
           </div><!--/.row-fluid-->
         </div><!--/.container-fluid-->
       </header>
+      <div class="main-content">
+        <div class="hero-wrapper darkbg">
+          <div class="container-fluid hero">
+            <div class="row">
+              <div class="headline col-sm-8 col-sm-offset-2 col-xs-12">
+                <h1>Location Intelligence Headline</h1>
+                <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse viverra faucibus nisi a adipiscing.</h2>
+              </div>
+            </div><!--/.row-->
+          </div><!--/.hero-->
+        </div><!--.hero-wrapper-->
 
+        <div class="category-content">
+          <div class="container-fluid">
+            <div class="row">
+
+            </div><!--/.row-->
+          </div><!--/.container-fluid-->
+        </div><!--/.category-content-->
+      </div><!--/.main-content-->
       <footer>
-
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-sm-2 col-xs-12 col-sm-offset-1 link-group">
+              <h2>About Pitney Bowes</h2>
+              <ul>
+                <li><a href="#">Our company</a></li>
+                <li><a href="#">Corporate Responsibility</a></li>
+                <li><a href="#">Newsroom</a></li>
+                <li><a href="#">Investor Relations</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">Software Partners</a></li>
+              </ul>
+            </div>
+            <div class="link-group-divider col-sm-1 col-sm-offset-1 hidden-xs"></div>
+            <div class="col-sm-2 col-xs-12 link-group">
+              <h2>Support</h2>
+              <ul>
+                <li><a href="#">View &amp; Pay Bills</a></li>
+                <li><a href="#">Product Assistance</a></li>
+                <li><a href="#">Customer Service</a></li>
+                <li><a href="#">Postal Rate Change</a></li>
+                <li><a href="#">Community Downloads</a></li>
+                <li><a href="#">Search MSDS</a></li>
+                <li><a href="#">Postal Information</a></li>
+              </ul>
+            </div>
+            <div class="link-group-divider col-sm-1 col-sm-offset-1 hidden-xs"></div>
+            <div class="col-sm-2 last link-group col-xs-12">
+              <h2>Community</h2>
+              <ul>
+                <li><a href="#">Social Hub</a></li>
+                <li><a href="#">User Forums &amp; Groups</a></li>
+                <li><a href="#">Blogs</a></li>
+                <li><a href="#">Follow Us</a></li>
+              </ul>
+            </div>
+          </div><!--/.row-->
+          <div class="row">
+            <div class="bottom-links col-xs-12">
+              <ul>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Sitemap</a></li>
+                <li><a href="#">Privacy</a></li>
+                <li class="last"><a href="#">Legal</a></li>
+              </ul>
+            </div><!--/.bottom-links-->
+          </div><!--/.row-->
+        </div><!--.container-fluid-->
       </footer>
       <div class="menu-overlay animated">
         <div class="fixed-top">
