category template with opensearch js file include

--- a/app/category.html
+++ b/app/category.html
@@ -187,8 +187,9 @@
         <!-- build:js({app,.tmp}) scripts/main.js -->
         <script src="scripts/pb.main.js"></script>
         <script src="scripts/pb.menu.js"></script>
+        <script src="scripts/pb.opensearch.js"></script>
         <script src="scripts/pb.category.js"></script>
-        <script src="scripts/pb.category.content.js"></script>
+        <script src="scripts/category/pb.category.content.js"></script>
         <!-- endbuild -->
 
 </body>
