category page header with background color and headroom plugin for disappearing header

--- a/app/brand-story.html
+++ b/app/brand-story.html
@@ -160,6 +160,7 @@
         <script src="scripts/vendors/jquery/jquery.event.move.js"></script>
         <script src="scripts/vendors/jquery/jquery.event.swipe.js"></script>
         <script src="scripts/vendors/snappish/jquery.snappish.js"></script>
+        <script src="scripts/vendors/headroom.js"></script>
         <!-- endbuild -->
 
 
@@ -167,6 +168,7 @@
         <script src="scripts/pb.main.js"></script>
         <script src="scripts/pb.brandstory.js"></script>
         <script src="scripts/pb.menu.js"></script>
+        <script src="scripts/pb.header.js"></script>
         <script src="scripts/brandstory/pb.brandstory.story1.js"></script>
         <!-- endbuild -->
 
