--- a/app/index.html
+++ b/app/index.html
@@ -234,12 +234,14 @@
         <script src="scripts/vendors/jquery/jquery-1.11.1.min.js"></script>
         <script src="scripts/vendors/jquery/jquery-ui.min.js"></script>
         <script src="scripts/vendors/modernizr.prod.min.js"></script>
+        <script src="scripts/vendors/headroom.js"></script>
         <!-- endbuild -->
 
 
         <!-- build:js({app,.tmp}) scripts/main.js -->
         <script src="scripts/pb.main.js"></script>
         <script src="scripts/pb.menu.js"></script>
+        <script src="scripts/pb.header.js"></script>
         <script src="scripts/pb.opensearch.js"></script>
         <script src="scripts/pb.home.js"></script>
         <!-- endbuild -->
