--- a/app/category.html
+++ b/app/category.html
@@ -41,6 +41,7 @@
                 <img src="images/pitneybowes-logo.png" alt="pitney bowes logo" class="hidden-xs"/>
                 <img src="images/sprite-mobile/pitneybowes-logo2x.png" alt="pitney bowes logo" class="visible-xs logo-mobile"/>
               </a>
+              <span class="cat-title">Location Intelligence</span>
             </div>
             <nav class="col-xs-6">
               <ul>
