corrected homepage copy, added search animation, corrected homepage hovers

--- a/app/index.html
+++ b/app/index.html
@@ -97,9 +97,9 @@
                 <div class="container-fluid">
                   <div class="row">
                     <div class="col-sm-8 col-sm-offset-2 col-xs-12 headline">
-                      <h2 class="animated fadeIn hidden-xs">Today, we've powered 2,435,865 check-ins on Facebook.</h2>
+                      <h2 class="animated fadeIn hidden-xs">We power <span id="power-percentage">90%</span> of the Fortune 500.</h2>
                       <h2 class="visible-xs col-xs-12">Customer Information Management</h2>
-                      <p class="animated fadeIn">Turn information into insights by connecting geography with data.</p>
+                      <p class="animated fadeIn">Find new marketing opportunities through data optimization.</p>
                     </div>
                   </div><!--/.row-->
                 </div><!--/.container-fluid-->
@@ -108,7 +108,7 @@
                 <div class="container-fluid">
                   <div class="row">
                     <div class="col-sm-8 col-sm-offset-2 col-xs-12 headline">
-                      <h2 class="animated fadeIn hidden-xs">PRI MEDOCREM MEI EU EUM SINT</h2>
+                      <h2 class="animated fadeIn hidden-xs">1.2 billion people use our technology to check-in on social media.</h2>
                       <h2 class="visible-xs col-xs-12">Location Intelligence</h2>
                       <p class="animated fadeIn">Turn information into insights by connecting geography with data.</p>
                     </div>
@@ -119,8 +119,9 @@
                 <div class="container-fluid">
                   <div class="row">
                     <div class="col-sm-8 col-sm-offset-2 col-xs-12 headline">
-                      <h2 class="animated fadeIn hidden-xs">PRI MEDOCREM MEI EU EUM SINT</h2>
+                      <h2 class="animated fadeIn hidden-xs">We help 2 million businesses deliver an effective message.</h2>
                       <h2 class="visible-xs col-xs-12">Customer Engagement</h2>
+                      <p class="animated fadeIn">Build brand loyalty by starting the right conversation.</p>
                     </div>
                   </div><!--/.row-->
                 </div><!--/.container-fluid-->
@@ -129,7 +130,7 @@
                 <div class="container-fluid">
                   <div class="row">
                     <div class="col-sm-8 col-sm-offset-2 col-xs-12 headline">
-                      <h2 class="animated fadeIn hidden-xs">Right Now, we're printing and sorting 9,125,744 bank statements.</h2>
+                      <h2 class="animated fadeIn hidden-xs">We print, sort and send 38 million pieces of mail every day.</h2>
                       <h2 class="visible-xs col-xs-12">Shipping and Mailing</h2>
                       <p class="animated fadeIn">Print. Mail. Ship. Increase productivity while lowering costs.</p>
                     </div>
@@ -140,9 +141,9 @@
                 <div class="container-fluid">
                   <div class="row">
                     <div class="col-sm-8 col-sm-offset-2 col-xs-12 headline">
-                      <h2 class="animated fadeIn hidden-xs">Yesterday, we helped 10,456 eBay packages clear customs in India.</h2>
+                      <h2 class="animated fadeIn hidden-xs">45 of the top 100 Internet retailers in the world use our technology.</h2>
                       <h2 class="visible-xs col-xs-12">Global Ecommerce</h2>
-                      <p class="animated fadeIn">Streamline international shipping by removing hurdles.</p>
+                      <p class="animated fadeIn">Streamline international shipping by removing the hurdles.</p>
                     </div>
                   </div><!--/.row-->
                 </div><!--/.container-fluid-->
@@ -234,6 +235,7 @@
         <script src="scripts/vendors/jquery/jquery-1.11.1.min.js"></script>
         <script src="scripts/vendors/jquery/jquery-ui.min.js"></script>
         <script src="scripts/vendors/modernizr.prod.min.js"></script>
+        <script src='scripts/vendors/greensock/TweenMax.min.js'></script>
         <!-- endbuild -->
 
 
