--- a/app/index.html
+++ b/app/index.html
@@ -219,7 +219,7 @@
                 <a href="#">
                   <img src="images/pitneybowes-logo.png" alt="pitney bowes logo" class="hidden-xs"/>
                 </a>
-                <input type="text" value="Search" class="visible-xs mobile-search" />
+                <input type="text" value="Search" class="mobile-search" />
                 <a href="#" class="search-clear">clear</a>
               </div>
               <div class="col-xs-2 col-sm-8">
@@ -235,8 +235,8 @@
         <script src="scripts/vendors/jquery/jquery-1.11.1.min.js"></script>
         <script src="scripts/vendors/jquery/jquery-ui.min.js"></script>
         <script src="scripts/vendors/modernizr.prod.min.js"></script>
-        <script src='scripts/vendors/greensock/TweenMax.min.js'></script>
         <script src="scripts/vendors/headroom.js"></script>
+        <script src='scripts/vendors/greensock/TweenMax.min.js'></script>
         <!-- endbuild -->
 
 
@@ -244,8 +244,8 @@
         <script src="scripts/pb.main.js"></script>
         <script src="scripts/pb.menu.js"></script>
         <script src="scripts/pb.header.js"></script>
-        <script src="scripts/pb.opensearch.js"></script>
         <script src="scripts/pb.home.js"></script>
+        <script src="scripts/pb.opensearch.js"></script>
         <!-- endbuild -->
 
 </body>
