started adding tabs

--- a/app/category.html
+++ b/app/category.html
@@ -68,8 +68,23 @@
         <div class="category-content">
           <div class="container-fluid">
             <div class="row">
-
+                <h2 class="col-xs-6 col-sm-4 tab active"><a href="#">Tab 1</a></h2>
+                <h2 class="col-xs-6 col-sm-4 tab"><a href="#">Tab 2</a></h2>
             </div><!--/.row-->
+            <div class="tab-pane-content">
+              <div class="row">
+                <p class="col-xs-12 results">Showing 4 results</p>
+              </div><!--/.row-->
+              <div class="row">
+                <div class="content-bucket content-bucket-type-1 col-xs-12">
+                  <p class="content-type-title">Case Study</p>
+                  <img src="http://placehold.it/610x260">
+                  <h3>Bank J Van Brenda</h3>
+                  <p>Goes paperless and implements electronic signatures</p>
+                  <a href="#">Get the Story</a>
+                </div>
+              </div><!--/.row-->
+            </div>
           </div><!--/.container-fluid-->
         </div><!--/.category-content-->
       </div><!--/.main-content-->
@@ -190,7 +205,6 @@
         <script src="scripts/pb.main.js"></script>
         <script src="scripts/pb.menu.js"></script>
         <script src="scripts/pb.header.js"></script>
-        <script src="scripts/pb.opensearch.js"></script>
         <script src="scripts/pb.category.js"></script>
         <script src="scripts/category/pb.category.content.js"></script>
         <!-- endbuild -->
