added new js files for templates

--- a/app/brand-story.html
+++ b/app/brand-story.html
@@ -154,7 +154,7 @@
         </div><!--/.table-->
       </div><!--/.menu-overlay-->
 
-        <!-- build:js scripts/vendor.js -->
+        <!-- build:js scripts/vendor-brandstory.js -->
         <script src="scripts/vendors/jquery/jquery-1.11.1.min.js"></script>
         <script src="scripts/vendors/jquery/jquery.mousewheel.min.js"></script>
         <script src="scripts/vendors/jquery/jquery.event.move.js"></script>
@@ -164,7 +164,7 @@
         <!-- endbuild -->
 
 
-        <!-- build:js({app,.tmp}) scripts/main.js -->
+        <!-- build:js({app,.tmp}) scripts/main-brandstory.js -->
         <script src="scripts/pb.main.js"></script>
         <script src="scripts/pb.brandstory.js"></script>
         <script src="scripts/pb.menu.js"></script>
