--- a/app/category.html
+++ b/app/category.html
@@ -144,12 +144,11 @@
             <div class="row">
               <div class="logo col-sm-4 col-xs-10">
                 <a href="#">
-                  <img src="images/pitneybowes-logo.png" alt="pitney bowes logo" class="hidden-xs"/>
+                  <img src="images/pitneybowes-logo.png" alt="pitney bowes logo"/>
                 </a>
-                <input type="text" value="Search" class="visible-xs mobile-search" />
               </div>
               <div class="col-xs-2 col-sm-8">
-                <a href="#" class="close"></a>
+                <a href="#" class="close close-menu pull-right"></a>
               </div>
             </div>
           </div>
@@ -157,12 +156,12 @@
         <div class="table">
           <div class="vertical-wrap">
             <div class="container-fluid">
-              <div class="row secondary-nav">
-                <div class="col-xs-6 visible-xs"><a href="#">My Account</a></div>
-                <div class="col-xs-6 col-sm-4 col-sm-offset-4 us-link"><a href="#">U.S. English</a></div>
-                <div class="col-xs-12 visible-xs">
-                  <div class="divider"></div>
-                </div>
+              <div class="row secondary-nav visible-xs">
+                <div class="col-xs-6"><a href="#">My Account</a></div>
+                <div class="col-xs-6"><a href="#">Shop</a></div>
+              </div>
+              <div class="col-xs-12 visible-xs">
+                <div class="divider"></div>
               </div>
               <div class="row">
                 <div class="col-xs-12">
@@ -176,32 +175,39 @@
                     <li class="last"><a href="#">Brand Story FPO</a></li>
                   </ul>
                 </div>
-                <div class="col-xs-12">
-                  <div class="divider"></div>
+              </div>
+              <div class="col-xs-12">
+                <div class="divider"></div>
+              </div>
+              <div class="row secondary-nav">
+                <div class="col-xs-12 col-sm-6 desktop-menu-footer">
+                  <div class="col-xs-6 col-sm-4"><a href="#">Support</a></div>
+                  <div class="col-xs-6 col-sm-4"><a href="#">Industries</a></div>
+                  <div class="col-xs-12 col-sm-4 hidden-xs"><a href="#">U.S. English</a></div>
                 </div>
               </div>
-              <ul class="bottom-links row">
-                <li><a href="#">Support</a></li>
-                <li><a href="#">Industries</a></li>
-                <li><a href="#">Ink and Supplies</a></li>
-                <li class="last"><a href="#">Small Business</a></li>
-              </ul>
-
+              <div class="col-xs-12 visible-xs">
+                <div class="divider"></div>
+              </div>
+              <div class="row secondary-nav visible-xs">
+                <div class="col-xs-12 col-sm-4"><a href="#">U.S. English</a></div>
+              </div>
             </div><!--/.container-fluid-->
           </div><!--/.vertical-wrap-->
         </div><!--/.table-->
       </div><!--/.menu-overlay-->
 
 
-        <!-- build:js scripts/vendor.js -->
+        <!-- build:js scripts/vendor-category.js -->
         <script src="scripts/vendors/jquery/jquery-1.11.1.min.js"></script>
         <script src="scripts/vendors/jquery/jquery-ui.min.js"></script>
         <script src="scripts/vendors/modernizr.prod.min.js"></script>
         <script src="scripts/vendors/headroom.js"></script>
+        <script src='scripts/vendors/greensock/TweenMax.min.js'></script>
         <!-- endbuild -->
 
 
-        <!-- build:js({app,.tmp}) scripts/main.js -->
+        <!-- build:js({app,.tmp}) scripts/main-category.js -->
         <script src="scripts/pb.main.js"></script>
         <script src="scripts/pb.menu.js"></script>
         <script src="scripts/pb.header.js"></script>
