--- a/app/index.html
+++ b/app/index.html
@@ -97,7 +97,7 @@
                 <div class="container-fluid">
                   <div class="row">
                     <div class="col-sm-8 col-sm-offset-2 col-xs-12 headline">
-                      <h2 class="animated fadeIn hidden-xs">We power <span id="power-percentage">90%</span> of the Fortune 500.</h2>
+                      <h2 class="animated fadeIn hidden-xs">We power <span id="power-percentage"></span> of the Fortune 500.</h2>
                       <h2 class="visible-xs col-xs-12">Customer Information Management</h2>
                       <p class="animated fadeIn">Find new marketing opportunities through data optimization.</p>
                     </div>
@@ -251,6 +251,7 @@
         <script src="scripts/pb.menu.js"></script>
         <script src="scripts/pb.header.js"></script>
         <script src="scripts/pb.home.js"></script>
+        <script src="scripts/pb.animatedvalues.js"></script>
         <!-- endbuild -->
 
 </body>
