animated values function changed

--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,8 @@
           <div class="header"></div>
           <!--<div class="snappish-main">-->
               <article class="welcome" id="welcome">
+                <span id="power-percentage"></span>
+
                   <div class="catbg"></div>
                   <div class="container-fluid">
                     <div class="row">
@@ -97,7 +99,7 @@
                 <div class="container-fluid">
                   <div class="row">
                     <div class="col-sm-8 col-sm-offset-2 col-xs-12 headline">
-                      <h2 class="animated fadeIn hidden-xs">We power <span id="power-percentage"></span> of the Fortune 500.</h2>
+                      <h2 class="animated fadeIn hidden-xs">We power  of the Fortune 500.</h2>
                       <h2 class="visible-xs col-xs-12">Customer Information Management</h2>
                       <p class="animated fadeIn">Find new marketing opportunities through data optimization.</p>
                     </div>
