--- a/app/index.html
+++ b/app/index.html
@@ -57,7 +57,7 @@
           <div class="header"></div>
           <!--<div class="snappish-main">-->
               <article class="welcome" id="welcome">
-                <span id="power-percentage"></span>
+
 
                   <div class="catbg"></div>
                   <div class="container-fluid">
@@ -89,7 +89,7 @@
                 <div class="container-fluid">
                   <div class="row">
                     <div class="col-sm-8 col-sm-offset-2 col-xs-12 headline">
-                      <h1 class="animated fadeInUp">Brand Story FPO</h1>
+                      <h1 class="animated fadeInUp">Brand Story FPO <span id="power-percentage"></span></h1>
                       <p class="animated fadeInUp larger"><a href="brand-story.html">lorem ipsum sit amet<span class="icn icn-caret"></span></a></p>
                     </div>
                   </div>
@@ -110,7 +110,7 @@
                 <div class="container-fluid">
                   <div class="row">
                     <div class="col-sm-8 col-sm-offset-2 col-xs-12 headline">
-                      <h2 class="animated fadeIn hidden-xs">1.2 billion people use our technology to check-in on social media.</h2>
+                      <h2 class="animated fadeIn hidden-xs"><span class="myval">1.2</span> billion people use our technology to check-in on social media.</h2>
                       <h2 class="visible-xs col-xs-12">Location Intelligence</h2>
                       <p class="animated fadeIn">Turn information into insights by connecting geography with data.</p>
                     </div>
