cleaned up home page default animation, homepage styles, homepage number animations

--- a/app/index.html
+++ b/app/index.html
@@ -81,8 +81,8 @@
                 <div class="container-fluid">
                   <div class="row">
                     <div class="col-sm-8 col-sm-offset-2 col-xs-12 headline">
-                      <h1 class="animated fadeInUp">Brand Story FPO <span id="power-percentage"></span></h1>
-                      <p class="animated fadeInUp larger"><a href="brand-story.html">lorem ipsum sit amet<span class="icn icn-caret"></span></a></p>
+                      <h1 class="animated fadeInUp">Brand Story FPO</h1>
+                      <p class="animated fadeIn larger"><a href="brand-story.html">lorem ipsum sit amet<span class="icn icn-caret"></span></a></p>
                     </div>
                   </div>
                 </div>
@@ -91,7 +91,7 @@
                 <div class="container-fluid">
                   <div class="row">
                     <div class="col-sm-8 col-sm-offset-2 col-xs-12 headline">
-                      <h2 class="animated fadeIn hidden-xs">We power <span class="power-percentage">0</span> of the Fortune 500.</h2>
+                      <h2 class="animated fadeIn hidden-xs">We power <span id="power-percentage">0</span> of the Fortune 500.</h2>
                       <h2 class="visible-xs col-xs-12">Customer Information Management</h2>
                       <p class="animated fadeIn">Find new marketing opportunities through data optimization.</p>
                     </div>
@@ -135,7 +135,7 @@
                 <div class="container-fluid">
                   <div class="row">
                     <div class="col-sm-8 col-sm-offset-2 col-xs-12 headline">
-                      <h2 class="animated fadeIn hidden-xs">45 of the top 100 Internet retailers in the world use our technology.</h2>
+                      <h2 class="animated fadeIn hidden-xs"><span id='retailer-value'>45</span> of the top <span id='retailer-value-2'>100</span> Internet retailers in the world use our technology.</h2>
                       <h2 class="visible-xs col-xs-12">Global Ecommerce</h2>
                       <p class="animated fadeIn">Streamline international shipping by removing the hurdles.</p>
                     </div>
