added click event for location intelligence to show the xmlhttp request to load category pages from the home page

--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,7 @@
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
         <link rel="stylesheet" href="styles/home.css">
+        <link rel="stylesheet" href="styles/category.css">
         <!-- endbuild -->
 
         <!--[if lt IE 9]>
@@ -63,7 +64,7 @@
                         <a href="#" class="category-1">Customer Information Management</a>
                       </div><!--/.col-sm-2.col-xs-12-->
                       <div class="cat col-sm-2">
-                        <a href="#" class="category-2">Location Intelligence</a>
+                        <a href="#" class="category-2" data-cat="location-intelligence">Location Intelligence</a>
                       </div><!--/.col-sm-2.col-xs-12-->
                       <div class="cat col-sm-2">
                         <a href="#" class="category-3">Customer Engagement</a>
@@ -246,6 +247,8 @@
         <script src="scripts/pb.header.js"></script>
         <script src="scripts/pb.home.js"></script>
         <script src="scripts/pb.animatedvalues.js"></script>
+        <script src="scripts/pb.category.js"></script>
+        <script src="scripts/category/pb.category.content.js"></script>
         <!-- endbuild -->
 
 </body>
