added all desktop images for category page

--- a/app/category.html
+++ b/app/category.html
@@ -18,7 +18,7 @@
         <!-- bower:css -->
         <!-- endbower -->
         <!-- endbuild -->
-        <!-- build:css(.tmp) styles/main.css -->
+        <!-- build:css(.tmp) styles/main-category.css -->
         <link rel="stylesheet" href="styles/main.css">
         <link rel="stylesheet" href="styles/category.css">
         <!-- endbuild -->
