--- a/app/brand-story.html
+++ b/app/brand-story.html
@@ -18,7 +18,7 @@
         <!-- bower:css -->
         <!-- endbower -->
         <!-- endbuild -->
-        <!-- build:css(.tmp) styles/main.css -->
+        <!-- build:css(.tmp) styles/main-brandstory.css -->
         <link rel="stylesheet" href="styles/main.css">
         <link rel="stylesheet" href="styles/brandstory.css">
         <!-- endbuild -->
