category page tab grid width updated

--- a/app/category.html
+++ b/app/category.html
@@ -69,8 +69,8 @@
           <div class="container-fluid page-container">
             <div class="page-content">
             <div class="row">
-                <h2 class="col-xs-6 col-sm-4 tab active"><a href="#" class="categorychange">Tab 1</a></h2>
-                <h2 class="col-xs-6 col-sm-4 tab"><a href="#">Tab 2</a></h2>
+                <h2 class="col-xs-6 tab active"><a href="#">Tab 1</a></h2>
+                <h2 class="col-xs-6 tab"><a href="#">Tab 2</a></h2>
             </div><!--/.row-->
             <div class="tab-pane-content">
               <div class="row">
