category page explore solutions tab components built: 1 column full width, 1 column bg with 2 content columns, 2 column modules

--- a/app/brand-story.html
+++ b/app/brand-story.html
@@ -12,6 +12,7 @@
         <meta property="og:image" content="" />
         <meta property="og:type" content="website"/>
         <meta property="og:description" content=""/>
+        <meta name="robots" content="nofollow" />
         <link rel="shortcut icon" href="/favicon-empty.ico">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <!-- build:css styles/vendor.css -->
