--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
         <meta property="og:image" content="" />
         <meta property="og:type" content="website"/>
         <meta property="og:description" content=""/>
+        <meta name="robots" content="nofollow" />
         <link rel="shortcut icon" href="/favicon-empty.ico">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <!-- build:css styles/vendor.css -->
