--- a/app/content/story-1-content.html
+++ b/app/content/story-1-content.html
@@ -1,3 +1,43 @@
+<!----------------------------   DELETE ME -------------------------------->
+<!doctype html>
+<html class="no-js">
+    <head>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta charset="utf-8">
+        <title>PB</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width,minimal-ui">
+        <meta property="og:title" content=""/>
+        <meta property="og:url" content=""/>
+        <meta property="og:site_name" content="" />
+        <meta property="og:image" content="" />
+        <meta property="og:type" content="website"/>
+        <meta property="og:description" content=""/>
+        <link rel="shortcut icon" href="/favicon-empty.ico">
+        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+        <!-- build:css styles/vendor.css -->
+        <!-- bower:css -->
+        <!-- endbower -->
+        <!-- endbuild -->
+        <!-- build:css(.tmp) styles/main.css -->
+        <link rel="stylesheet" href="../styles/main.css">
+        <link rel="stylesheet" href="../styles/home.css">
+        <link rel="stylesheet" href="../styles/category.css">
+        <!-- endbuild -->
+
+        <!--[if lt IE 9]>
+        <!-- build:js scripts/ie-dependencies.js -->
+        <!-- bower:js -->
+        <script src="../scripts/vendors/html5shiv.min.js"></script>
+        <script src="../scripts/vendors/respond.min.js"></script>
+        <!-- endbower -->
+        <!-- endbuild -->
+        <![endif]-->
+    </head>
+    <body>
+      <header>
+      </header>
+<!----------------------------  END DELETE ME  ---------------------------->
 <div class="container-fluid">
   <div class="row">
       <h1>STORY 1 CONTENT</h1>
@@ -7,4 +47,36 @@
 
       <p>Morbi quis laoreet nisi, sit amet suscipit ligula. Vestibulum bibendum luctus aliquet. Duis at ligula quis magna sodales ultricies. Sed vitae iaculis odio. In hac habitasse platea dictumst. Phasellus nisl lacus, porta a placerat nec, consectetur et eros. Sed nec consectetur ipsum, tincidunt mollis quam. Curabitur consequat est ut diam viverra sollicitudin.</p>
   </div>
+  <div class="row">
+    <div class="col-xs-12 col-sm-6 video-container" data-video-id="M7lc1UVf-VE">
+      <img class="video-still" src="http://placehold.it/640x395">
+    </div>
+    <div class="col-xs-12 col-sm-6 video-container" data-video-id="txqiwrbYGrs">
+      <img class="video-still" src="http://placehold.it/640x395">
+    </div>
+  </div>
 </div>
+<!----------------------------   DELETE ME   -------------------------------->
+<!-- build:js scripts/vendor.js -->
+<script src="../scripts/vendors/jquery/jquery-1.11.1.min.js"></script>
+<script src="../scripts/vendors/jquery/jquery-ui.min.js"></script>
+<script src="../scripts/vendors/modernizr.prod.min.js"></script>
+<script src="../scripts/vendors/headroom.js"></script>
+<script src='../scripts/vendors/greensock/TweenMax.min.js'></script>
+<!-- endbuild -->
+
+
+<!-- build:js({app,.tmp}) scripts/main.js -->
+<script src="../scripts/pb.main.js"></script>
+<script src="../scripts/pb.menu.js"></script>
+<script src="../scripts/pb.header.js"></script>
+<script src="../scripts/pb.home.js"></script>
+<script src="../scripts/pb.animatedvalues.js"></script>
+<script src="../scripts/pb.category.js"></script>
+<script src="../scripts/category/pb.category.content.js"></script>
+<script src="../scripts/pb.video.js"></script>
+<!-- endbuild -->
+
+</body>
+</html>
+<!---------------------------- END DELETE ME -------------------------------->
