--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,8 @@
               <ul>
                 <li><a href="#" class="icn-menu"></a><li>
                 <li><a href="#" class="icn-search"></a></li>
-                <li><a href="#" class="icn-cart"></a></li>
+                <li><a href="#" class="text-link hidden-xs">Shop</a></li>
+                <li><a href="#" class="text-link hidden-xs">My Account</a></li>
               </ul>
             </nav>
           </div><!--/.row-fluid-->
@@ -195,14 +196,14 @@
                 <div class="col-xs-12 col-sm-6 desktop-menu-footer">
                   <div class="col-xs-6 col-sm-4"><a href="#">Support</a></div>
                   <div class="col-xs-6 col-sm-4"><a href="#">Industries</a></div>
-                  <div class="col-xs-12 col-sm-4 hidden-xs"><a href="#">U.S. English</a></div>
+                  <div class="col-xs-12 col-sm-4 hidden-xs"><a href="#">United States</a></div>
                 </div>
               </div>
               <div class="col-xs-12 visible-xs">
                 <div class="divider"></div>
               </div>
               <div class="row secondary-nav visible-xs">
-                <div class="col-xs-12 col-sm-4"><a href="#">U.S. English</a></div>
+                <div class="col-xs-12 col-sm-4"><a href="#">United States</a></div>
               </div>
             </div><!--/.container-fluid-->
           </div><!--/.vertical-wrap-->
