--- a/app/category.html
+++ b/app/category.html
@@ -73,29 +73,31 @@
                 <h2 class="col-xs-6 tab"><a href="#">Find Products</a></h2>
             </div><!--/.row-->
             <div class="row">
-              <p class="col-xs-12 results">Showing 4 results</p>
+              <p class="col-xs-12 results">Showing 2 case studies and 2 other items results</p>
             </div><!--/.row-->
           </div><!--/.container-fluid-->
           <div class="tab-pane-content" id="explore-ideas">
 
           <div class="container-fluid">
             <div class="row">
-              <div class="module col1-fullbg example1">
-                <div class="col-xs-12 type-cat">
-                  <a href="#">case study</a>
-                  <a href="#" class="last">retail</a>
+              <div class="module col1-halfbg example1">
+                <div class="col-xs-12 type-cat border">
+                  <a href="#case-study">case study</a>
+                  <a href="#retail" class="last">retail</a>
                 </div>
-                <div class="col-sm-6 col-xs-12 vert">
+                <div class="col-xs-12 cat-techlinks">
+                  <p>Technology Used: <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#">. . .</a></p>
+                </div><!--/.cat-techlinks-->
+                <a href="#"><div class="col-sm-6 col-xs-12 vert left">
                   <div class="table">
                     <div class="vertical-wrap">
-                      <p><strong>Peugeot Citroen</strong></p>
-                      <h3>The best drive time data for sales forecasting</h3>
-                      <p>Improve the accuracy of drive time estimates around the catchment areas for dealerships.</p>
+                      <h3 class="big">The best drive time data for sales forecasting</h3>
+                      <p><i>Peugeot Citroen</i> improves the accuracy of drive time estimates around the catchment areas for dealerships.</p>
                     </div><!--/.vertical-wrap-->
                   </div><!--/.table-->
-                </div><!--/.col-xs-12.col-sm-->
+                </div></a><!--/.col-xs-12.col-sm-->
 
-                <div class="col-sm-6 col-xs-12 vert">
+                <a href="#"><div class="col-sm-6 bg col-xs-12 vert">
                   <div class="table">
                     <div class="vertical-wrap">
                       <blockquote>"We no longer have to justify our drive time calculations and the dealers have full confidence in the intelligence we supply to them."
@@ -107,7 +109,7 @@
                       </blockquote>
                     </div><!--/.vertical-wrap-->
                   </div><!--/.table-->
-                </div><!--/.col-xs-12.col-sm-6-->
+                </div></a><!--/.col-xs-12.col-sm-6-->
               </div><!--/.module-->
             </div><!--/.row-->
           </div><!--/.container-fluid-->
@@ -115,20 +117,23 @@
             <div class="container-fluid">
               <div class="row">
                 <div class="module col1-fullbg darkbg">
-                  <div class="col-xs-12 type-cat">
-                    <a href="#">case study</a>
-                    <a href="#" class="last">finance</a>
+                  <div class="col-xs-12 type-cat border">
+                    <a href="#case-study">case study</a>
+                    <a href="#finance" class="last">finance</a>
                   </div>
-                  <div class="table">
+                  <div class="col-xs-12 cat-techlinks">
+                    <p class="center">Technology Used: <a href="#">Doc1<sup>&reg;</sup> document creation</a> <a href="#">e-Messaging Solution</a> <a href="#">Document Dialog</a></p>
+                  </div><!--/.cat-techlinks-->
+                  <a href="#"><div class="table">
                     <div class="vertical-wrap">
                       <div class="col-sm-8 col-xs-12 col-sm-offset-2">
-                        <h3 class="center underline"><i>90% of all documents are now using electronic signature. Speeding up processing of requests as well as cost savings</i></h3>
+                        <h3 class="center"><i>90% of all documents are now using electronic signature. Speeding up processing of requests as well as cost savings</i></h3>
                       </div><!--/.col-xs-12.col-sm-8-->
                       <div class="col-sm-4 col-xs-12 col-sm-offset-4">
-                        <p class="center">Bank J. Van Breda gets digital messaging, goes paperless and implements electronic signatures</p>
+                        <p class="center"><i>Bank J. Van Breda</i> gets digital messaging, goes paperless and implements electronic signatures</p>
                       </div>
                     </div><!--/.vertical-wrap-->
-                  </div><!--/.table-->
+                  </div></a><!--/.table-->
                 </div><!--/.module-->
               </div><!--/.row-->
             </div><!--/.container-fluid-->
@@ -141,27 +146,118 @@
                       <a href="#">article</a>
                       <a href="#" class="last">finance</a>
                     </div>
-                    <img src="images/category-template/desktop/img-halfwidth-half-height2.jpg" />
+                    <a href="#"><img src="images/category-template/desktop/col2-bg-halfheight1.jpg" />
                     <div class="col2-content half">
                       <h3>Using knowledge graphs to unlock consumer data</h3>
                       <p>How knowledge graphs can help businesses better mine their data...</p>
-                    </div>
+                    </div></a>
                   </div>
                 </div><!--/.module.col2-->
                 <div class="module col2 right">
                   <div class="col-xs-12">
                     <div class="type-cat border">
                       <a href="#">blog post</a>
-                      <a href="#" class="last">data governance</a>
-                    </div>
-                    <div class="col2-content">
-                      <h3>Why Relationships are the Next Big Thing in Big Data</h3>
-                      <p>by Navin Sharma | August 14, 2014</p>
-                      <p>Thanks to digitization and Big Data, unorganized and impossible-to-search-through manila folders and filing...</p>
+                      <a href="#" class="last">pb software blogs</a>
                     </div>
                   </div>
+                  <a href="#"><div class="table">
+                    <div class="vertical-wrap">
+                      <div class="col2-content">
+                        <h3 class="big">Why Relationships are the Next Big Thing in Big Data</h3>
+                        <p class="small"><i>by Navin Sharma | August 14, 2014</i></p>
+                        <p>Thanks to digitization and Big Data, unorganized and impossible-to-search-through manila folders and filing...</p>
+                      </div>
+                    </div><!--/.vertical-wrap-->
+                  </div></a><!--/.table-->
                 </div><!--/.module.col2-->
+              </div><!--/.row-->
+            </div><!--/.container-fluid-->
 
+            <div class="container-fluid">
+              <div class="row">
+                <div class="module col2 left bgexample1 darkbg">
+                  <div class="col-xs-12">
+                    <div class="type-cat border">
+                      <a href="#">case study</a>
+                      <a href="#" class="last">finance</a>
+                    </div>
+                  </div>
+                  <a href="#"><div class="table">
+                    <div class="vertical-wrap">
+                      <div class="col2-content">
+                        <h3 class="center"><i>90% of all documents are now using electronic signature. Speeding up processing of requests as well as cost savings</i></h3>
+                        <p class="center">Bank J. Van Breda gets digital messaging, goes paperless and implements electronic signatures</p>
+                      </div>
+                    </div><!--/.vertical-wrap-->
+                  </div></a><!--/.table-->
+                </div><!--/.module.col2-->
+                <a href="#"><div class="module col2 right darkbg bgexample2">
+                    <div class="col2-content pos bottom left">
+                      <h3><i>MapInfo Professional 12.5</i></h3>
+                      <p class="small">The power to visualize and analyze geographical information</p>
+                      <p class="uppercase"><span class="icn-dl"></span>download the free trial now</p>
+                    </div>
+                </div></a><!--/.module.col2-->
+              </div><!--/.row-->
+            </div><!--/.container-fluid-->
+
+            <div class="container-fluid">
+              <div class="row">
+                <div class="module col1-halfbg example1">
+                  <div class="col-xs-12 type-cat border">
+                    <a href="#case-study">case study</a>
+                    <a href="#retail" class="last">retail</a>
+                  </div>
+                  <div class="col-xs-12 cat-techlinks">
+                    <p>Technology Used: <a href="#">MapInfo Professional 12.5</a> <span class="blue-box"><a href="#">Download Free Trial</a></span> <a href="#">. . .</a></p>
+                  </div><!--/.cat-techlinks-->
+                  <a href="#"><div class="col-sm-6 col-xs-12 vert left">
+                    <div class="table">
+                      <div class="vertical-wrap">
+                        <h3 class="big">The best drive time data for sales forecasting</h3>
+                        <p><i>Peugeot Citroen</i> improves the accuracy of drive time estimates around the catchment areas for dealerships.</p>
+                      </div><!--/.vertical-wrap-->
+                    </div><!--/.table-->
+                  </div></a><!--/.col-xs-12.col-sm-->
+
+                  <a href="#"><div class="col-sm-6 bg col-xs-12 vert">
+                    <div class="table">
+                      <div class="vertical-wrap">
+                        <blockquote>"We no longer have to justify our drive time calculations and the dealers have full confidence in the intelligence we supply to them."
+                          <span class="quote-cite">
+                          <strong>Andrew Bury,</strong><br>
+                          Network Planning Manager,<br>
+                          Peugeot Citroen Automobiles, UK Ltd
+                          </span>
+                        </blockquote>
+                      </div><!--/.vertical-wrap-->
+                    </div><!--/.table-->
+                  </div></a><!--/.col-xs-12.col-sm-6-->
+                </div><!--/.module-->
+              </div><!--/.row-->
+            </div><!--/.container-fluid-->
+
+            <div class="container-fluid">
+              <div class="row">
+                <div class="module col2 left">
+                  <div class="col-xs-12">
+                    <div class="type-cat border white">
+                      <a href="#case-study">case study</a>
+                    </div>
+                    <a href="#"><img src="images/category-template/desktop/col2-bg-halfheight3.jpg" />
+                    <div class="col2-content half">
+                      <h3>The best drive time data for sales forecasting</h3>
+                      <p><i>Peugeot Citroen</i> improves the accuracy of drive time estimates around the catchment areas for dealerships.</p>
+                    </div></a>
+                  </div>
+                </div><!--/.module.col2-->
+                <a href="#"><div class="module col2 right darkbg bgexample3">
+                    <div class="col2-content pos bottom left">
+                      <h3><i>MapInfo Professional 12.5</i></h3>
+                      <p class="small">The power to visualize and analyze geographical information</p>
+                      <p class="uppercase"><span class="icn-dl"></span>download the free trial now</p>
+                    </div>
+                </div></a><!--/.module.col2-->
               </div><!--/.row-->
             </div><!--/.container-fluid-->
 
