added technology links to last half width video module

--- a/app/category.html
+++ b/app/category.html
@@ -338,7 +338,14 @@
                   </div>
                 </div><!--/.module.col2-->
 
-                <a href="#"><div class="module col2 right darkbg bgexample1">
+                <div class="module col2 right darkbg bgexample1">
+                    <div class="type-cat border white">
+                      <a href="#case-study">case study</a>
+                      <a href="#finance" class="last">finance</a>
+                    </div>
+                    <div class="col-xs-12 cat-techlinks">
+                      <p class="center">Technology Used: <a href="#">MapInfo Professional</a> <a href="#">MapInfo Drivetime</a> <a href="#">. . .</a></p>
+                    </div><!--/.cat-techlinks-->
                     <a href="#"><div class="table">
                       <div class="vertical-wrap">
                         <div class="col2-content">
@@ -347,7 +354,7 @@
                         </div>
                       </div><!--/.vertical-wrap-->
                     </div></a><!--/.table-->
-                </div></a><!--/.module.col2-->
+                </div><!--/.module.col2-->
 
               </div><!--/.row-->
             </div><!--/.container-fluid-->
