updated video player scripts

--- a/app/content/story-1-content.html
+++ b/app/content/story-1-content.html
@@ -49,9 +49,11 @@
   </div>
   <div class="row">
     <div class="col-xs-12 col-sm-6 video-container" data-video-id="M7lc1UVf-VE">
+      <div id="player-1"></div>
       <img class="video-still" src="http://placehold.it/640x395">
     </div>
     <div class="col-xs-12 col-sm-6 video-container" data-video-id="txqiwrbYGrs">
+      <div id="player-2"></div>
       <img class="video-still" src="http://placehold.it/640x395">
     </div>
   </div>
@@ -74,7 +76,7 @@
 <script src="../scripts/pb.animatedvalues.js"></script>
 <script src="../scripts/pb.category.js"></script>
 <script src="../scripts/category/pb.category.content.js"></script>
-<script src="../scripts/pb.video.js"></script>
+<script src="../scripts/pb.video2.js"></script>
 <!-- endbuild -->
 
 </body>
