--- a/app/index.html
+++ b/app/index.html
@@ -94,7 +94,7 @@
                 <div class="container-fluid">
                   <div class="row">
                     <div class="col-sm-8 col-sm-offset-2 col-xs-12 headline">
-                      <h2 class="animated fadeIn hidden-xs">We power <span id="power-percentage">0</span> of the Fortune 500.</h2>
+                      <h2 class="animated fadeIn hidden-xs">We power <span id="power-percentage" class="percent animatedValue">0</span> of the Fortune 500.</h2>
                       <h2 class="visible-xs col-xs-12">Customer Information Management</h2>
                       <p class="animated fadeIn">Find new marketing opportunities through data optimization.</p>
                     </div>
@@ -127,7 +127,7 @@
                 <div class="container-fluid">
                   <div class="row">
                     <div class="col-sm-8 col-sm-offset-2 col-xs-12 headline">
-                      <h2 class="animated fadeIn hidden-xs">We print, sort and send <span id="send-value">0</span> million pieces of mail every day.</h2>
+                      <h2 class="animated fadeIn hidden-xs">We print, sort and send <span id="send-value" class="animatedValue">0</span> million pieces of mail every day.</h2>
                       <h2 class="visible-xs col-xs-12">Shipping and Mailing</h2>
                       <p class="animated fadeIn">Print. Mail. Ship. Increase productivity while lowering costs.</p>
                     </div>
@@ -138,7 +138,7 @@
                 <div class="container-fluid">
                   <div class="row">
                     <div class="col-sm-8 col-sm-offset-2 col-xs-12 headline">
-                      <h2 class="animated fadeIn hidden-xs"><span id='retailer-value'>45</span> of the top <span id='retailer-value-2'>100</span> Internet retailers in the world use our technology.</h2>
+                      <h2 class="animated fadeIn hidden-xs"><span id='retailer-value'>45</span> of the top <span id='retailer-value-2' class="animatedValue">100</span> Internet retailers in the world use our technology.</h2>
                       <h2 class="visible-xs col-xs-12">Global Ecommerce</h2>
                       <p class="animated fadeIn">Streamline international shipping by removing the hurdles.</p>
                     </div>
