majority of mobile styles implemented for category page - handing this version off to Todd after merging

--- a/app/content/story-1-content.html
+++ b/app/content/story-1-content.html
@@ -76,7 +76,7 @@
 <script src="../scripts/pb.animatedvalues.js"></script>
 <script src="../scripts/pb.category.js"></script>
 <script src="../scripts/category/pb.category.content.js"></script>
-<script src="../scripts/pb.video2.js"></script>
+<script src="../scripts/pb.video.js"></script>
 <!-- endbuild -->
 
 </body>
