mobile module styles

--- a/app/category.html
+++ b/app/category.html
@@ -333,9 +333,10 @@
                       <a href="#case-study">case study</a>
                     </div>
                     <a href="#">
-                    <div class="halfheight-bg example2"></div>
+                    <div class="halfheight-bg hidden-xs example2"></div>
                     <div class="col2-content half">
                       <h3>11 The best drive time data for sales forecasting</h3>
+                      <div class="halfheight-bg visible-xs example2"></div>
                       <p><i>Peugeot Citroen</i> improves the accuracy of drive time estimates around the catchment areas for dealerships.</p>
                     </div></a>
                   </div>
